            - Routine isAugTriSolidTorus() is now called recognise(), and
              returns a std::unique_ptr instead of a raw pointer.
              The old name is kept as a deprecated alias.
            - Added copy construction and copy assignment.
            - Added member and global swap() functions.
            - Added comparison operators == and !=.
            - Deprecated clone().  Just use the copy constructor instead.
        Class BanConstraintBase, BanNone, BanBoundary, BanTorusBoundary:
            - All methods are now public, not protected.
            - The init() routines are removed; instead these are now
              rolled into the class constructors, which all now take a
              single LPInitialTableaux as argument.
            - Added comparison operators == and !=.
            - Now derive from ShortOutput.
            - BanNone no longer derives from BanConstraintBase; instead this is
              intended as a trivial drop-in replacement.
        Class Base64SigEncoding:
            - New helper class that provides code common to isomorphism
              signatures and knot signatures.
        Class BitManipulator and related classes:
            - The class constants ...::specialised are now constexpr bools,
              not enum values.
        Class Bitmask, Bitmask1, Bitmask2:
            - Added compile-time constant fixedSize.
            - Added != to complement the already-existing == operator.
              Also, Bitmask can now compare bitmasks of different lengths,
              though the behaviour here has some important caveats; see the
              documentation for details.
            - Bitmask now has a move constructor, move assignment, and
              member and global swap() functions.
        Class BitmaskLen8, BitmaskLen16, BitmaskLen32, BitmaskLen64:
            - Deprecated.  Just use Bitmask1<uint8_t>, etc.
        Class BlockedSFS, BlockedSFSLoop, BlockedSFSPair, BlockedSFSTriple: